<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.main.bottombar.profile.edit.EditProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/urbanist_700"
            android:text="@string/text_title_toolbar_edit_profile_fragment"
            android:textColor="@color/color_text"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8fffffff"
        android:elevation="2dp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp">

                <ImageView
                    android:id="@+id/image_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:elevation="2dp"
                    android:src="@drawable/ic_edit" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/no_user_picture" />

                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <EditText
                android:id="@+id/edit_name"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:autofillHints="name"
                android:drawablePadding="12dp"
                android:hint="@string/text_hint_name_edit_profile_fragment"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edit_user"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:drawablePadding="12dp"
                android:hint="@string/text_hint_username_edit_profile_fragment"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edit_email"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:clickable="false"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:enabled="false"
                android:hint="@string/text_hint_email_edit_profile_fragment"
                android:inputType="textEmailAddress"
                android:textColor="@color/disabled"
                tools:text="myname@example.com" />

            <EditText
                android:id="@+id/edit_phone"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:drawablePadding="12dp"
                android:hint="@string/text_hint_phone_edit_profile_fragment"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edit_genre"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:drawablePadding="12dp"
                android:hint="@string/text_hint_sex_edit_profile_fragment"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edit_country"
                style="@style/ThemeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:drawablePadding="12dp"
                android:hint="@string/text_hint_country_edit_profile_fragment"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_update"
                style="@style/ThemePrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="32dp"
                android:text="@string/text_button_update_edit_profile_fragment"/>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>